// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slice test on ios Related articles renders single article 1`] = `
<View
  style={
    Object {
      "marginTop": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
  template="DEFAULT"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 0.5,
        "display": "flex",
        "height": 57,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 26,
        }
      }
    >
      Related links
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        onLayout={undefined}
      >
        <View
          style={null}
        >
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            <View
              aspectRatio={1.7777777777777777}
              style={Object {}}
            >
              <View
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <Image
                  onLoad={[Function]}
                  source={
                    Object {
                      "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": "100%",
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                />
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                      null,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <BVLinearGradient
                      colors={
                        Array [
                          "#f9f9f9",
                          "#ededed",
                        ]
                      }
                      end={
                        Object {
                          "x": -0.09302964577578221,
                          "y": 0.11488204504197774,
                        }
                      }
                      locations={
                        Array [
                          0,
                          1,
                        ]
                      }
                      start={
                        Object {
                          "x": 1,
                          "y": 0,
                        }
                      }
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "letterSpacing": 1,
                    "marginBottom": 2,
                  }
                }
              >
                BAYEUX TAPESTRY
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 6,
                  }
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  125 Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 10,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm, The Times
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Slice test on ios Related articles renders single article with no byline 1`] = `
<View
  style={
    Object {
      "marginTop": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
  template="DEFAULT"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 0.5,
        "display": "flex",
        "height": 57,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 26,
        }
      }
    >
      Related links
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        onLayout={undefined}
      >
        <View
          style={null}
        >
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            <View
              aspectRatio={1.7777777777777777}
              style={Object {}}
            >
              <View
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <Image
                  onLoad={[Function]}
                  source={
                    Object {
                      "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": "100%",
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                />
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                      null,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <BVLinearGradient
                      colors={
                        Array [
                          "#f9f9f9",
                          "#ededed",
                        ]
                      }
                      end={
                        Object {
                          "x": -0.09302964577578221,
                          "y": 0.11488204504197774,
                        }
                      }
                      locations={
                        Array [
                          0,
                          1,
                        ]
                      }
                      start={
                        Object {
                          "x": 1,
                          "y": 0,
                        }
                      }
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "letterSpacing": 1,
                    "marginBottom": 2,
                  }
                }
              >
                BAYEUX TAPESTRY
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 6,
                  }
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 10,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm, The Times
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Slice test on ios Related articles renders single article with no label 1`] = `
<View
  style={
    Object {
      "marginTop": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
  template="DEFAULT"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 0.5,
        "display": "flex",
        "height": 57,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 26,
        }
      }
    >
      Related links
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        onLayout={undefined}
      >
        <View
          style={null}
        >
          <View
            style={
              Object {
                "marginBottom": 10,
              }
            }
          >
            <View
              aspectRatio={1.7777777777777777}
              style={Object {}}
            >
              <View
                style={
                  Object {
                    "height": "100%",
                    "width": "100%",
                  }
                }
              >
                <Image
                  onLoad={[Function]}
                  source={
                    Object {
                      "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104&resize=996",
                    }
                  }
                  style={
                    Array [
                      Object {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      Object {
                        "height": "100%",
                        "width": "100%",
                      },
                      undefined,
                    ]
                  }
                />
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "flex": 1,
                      },
                      null,
                    ]
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <BVLinearGradient
                      colors={
                        Array [
                          "#f9f9f9",
                          "#ededed",
                        ]
                      }
                      end={
                        Object {
                          "x": -0.09302964577578221,
                          "y": 0.11488204504197774,
                        }
                      }
                      locations={
                        Array [
                          0,
                          1,
                        ]
                      }
                      start={
                        Object {
                          "x": 1,
                          "y": 0,
                        }
                      }
                      style={
                        Array [
                          Object {
                            "flex": 1,
                          },
                        ]
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "letterSpacing": 1,
                    "marginBottom": 2,
                  }
                }
              >
                
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 6,
                  }
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 10,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm, The Times
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Slice test on ios Related articles renders single article with no lead image 1`] = `
<View
  style={
    Object {
      "marginTop": 10,
      "paddingLeft": 10,
      "paddingRight": 10,
    }
  }
  template="DEFAULT"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#dbdbdb",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "borderTopColor": "#dbdbdb",
        "borderTopWidth": 0.5,
        "display": "flex",
        "height": 57,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 26,
        }
      }
    >
      Related links
    </Text>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "paddingBottom": 10,
          "paddingTop": 10,
        }
      }
    >
      <View
        onLayout={undefined}
      >
        <View
          style={null}
        >
          <View>
            <View
              style={Object {}}
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 12,
                    "letterSpacing": 1,
                    "marginBottom": 2,
                  }
                }
              >
                BAYEUX TAPESTRY
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesModern-Bold",
                    "fontSize": 22,
                    "fontWeight": "400",
                    "lineHeight": 22,
                    "marginBottom": 6,
                  }
                }
              >
                Now for a new battle: bringing the fragile masterpiece over safely
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "flexWrap": "wrap",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 14,
                    "lineHeight": 20,
                    "marginBottom": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  
                  Napoleon Bonaparte flaunted it to whip up enthusiasm for invading England. Heinrich Himmler tried to grab.
                  ...
                </Text>
              </Text>
              <Text
                accessibilityLabel="datePublication"
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 15,
                    "marginBottom": 10,
                  }
                }
                testID="datePublication"
              >
                Friday March 13 2015, 06:54pm, The Times
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
